# reASITIC

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml
docs/: Makefile  changelog.rst  concepts.rst  conf.py  getting_started.rst  index.rst  requirements.txt
docs/_templates/: module.rst
docs/api/: index.rst
src/reasitic/: __init__.py  _extra_stubs.c  _geometry.py  _kernel.pxd  _kernel.pyx  cli.py  geometry.py  info.py  kernel.py  shapes.py  tech.py
src/reasitic/exports/: gds.py  spice.py
src/reasitic/inductance/: decomp_ports.py  filament.py  grover.py  partial.py
src/reasitic/network/: analysis.py  twoport.py
src/reasitic/resistance/: dc.py  skin.py
src/reasitic/substrate/: __init__.py  fft_grid.py  green.py  lewin_cheng.py  segment_cap.py  shunt.py
tests/: test_gds_xor_compare.py  test_kernel_smoke.py  test_lrq_s2p_sweep.py  test_validation_compare.py
