[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reasitic"
version = "0.1.0"
description = "Modern Python interface for ASITIC's inductance/capacitance/Green's-function kernels, wrapped via Cython from the reverse-engineered C re-implementation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "reASITIC contributors" }]
keywords = ["asitic", "inductor", "spiral", "rfic", "electromagnetics", "green-function"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
test = ["pytest>=7"]
docs = [
    "sphinx>=7",
    "furo>=2024.5.6",
    "myst-parser>=2",
]

[project.urls]
Homepage = "https://github.com/AL-255/reASITIC"
Repository = "https://github.com/AL-255/reASITIC"
Documentation = "https://AL-255.github.io/reASITIC/"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["reasitic*"]

[tool.setuptools.package-data]
reasitic = ["*.pxd", "*.pyx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
